--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: 'Times New Roman', Times, serif;
+  font-family: 'Arial', serif;
   line-height: 1.5;
   font-weight: 400;
 }
